fix: add scrollbar color for improved visibility in scrollable areas

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -313,7 +313,7 @@ body {
   scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
-
+  scrollbar-color: var(--ds-grey-300) transparent;
   font-family: var(--content-font, var(--default-font));
 }
 
