--- a/src/components/pad.module.css
+++ b/src/components/pad.module.css
@@ -3,7 +3,6 @@
   width: 100%;
   min-height: 1000vw;
   overflow-y: hidden;
-  overflow-x: scroll;
 }
 
 .grid {
