--- a/src/components/post-it/footer.module.css
+++ b/src/components/post-it/footer.module.css
@@ -5,7 +5,6 @@
   padding: 6px 10px;
   background-color: var(--ds-grey-000);
   border-top: 1px solid var(--ds-grey-300);
-  border-radius: 0 0 var(--ds-radius-200) var(--ds-radius-200);
   opacity: 0;
   transition: opacity 160ms var(--ds-transition-easing);
   overflow: hidden;
